# ia

./: .gitignore
atv05/: .gitignore  atv_05.ipynb  atv_treino_ia.ipynb
atv06/: atv_06.ipynb
atv10-04/: app_sandbox.py  prd_huggingface_object_detection.md  requirements.txt  sandbox_object_detection.ipynb
atv10-04/.gradio/flagged/: dataset1.csv
atv_generalizacao/: 02_regularizacao_excessiva.ipynb
aula27-03-A1/: .gitignore  requirements.txt
aula27-03-A1/atv06/: atv_06.ipynb  requirements.txt
aula27-03-A1/smtp/: MLproject  Makefile  README.md  pyproject.toml
aula27-03-A1/smtp/experimentos/: regressao_default.yaml
aula27-03-A1/smtp/src/: train.py  utils.py
aula27-03/smtp/: requirements.txt
aula27-03/smtp/experimentos/: classificacao_default.yaml  classificacao_tunada.yaml
aula27-03/smtp/src/: preprocess.py
