[project]
name = "smtp"
version = "0.1.0"
description = "Standardized ML Training Pipeline"
urls = { repository = "https://github.com/example/smtp" }
dependencies = [
    "mlflow>=2.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0.0"
]
